le compte client 1/3

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -61,3 +61,11 @@ body { background-color: #f1f1ff; };
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.btn-large {
+  margin-bottom: 30px;
+}
+
+#account a {
+  width: 100%;
+}
