le compte client 2/3

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9246,11 +9246,11 @@ body {
   }
 }
 
-.btn-large {
-  margin-bottom: 30px;
+#account .btn-large {
+  margin-bottom: 30px !important;
 }
 
 #account a {
-  width: 100%;
+  width: 100% !important;
 }
 
